updated the index.html
this is me testing how hosting works in github and netlify

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1>this is where I will put my weather app project</h1>
+<h1>this is a testing website, Im learning how to use github and netlify</h1>
